Hopefully fixed issues on Safari with image resizing and component shadow.

--- a/kthcourses/src/app/globals.css
+++ b/kthcourses/src/app/globals.css
@@ -42,7 +42,7 @@ body {
 }
 
 .default-comp-style {
-  @apply drop-shadow-md rounded-lg p-4 animate-card-fade-in;
+  @apply rounded-lg p-4 shadow-md animate-card-fade-in;
 }
 
 
